@@ -9,6 +9,7 @@ version          = 0.07
 release_tests = 1
 installer     = ModuleBuild
 travis_status = 1
+github_user   = Perl5-Alien
 
 [RemovePrereqs]
 
@@ -27,3 +28,4 @@ ExtUtils::CChecker = 0.09
 [Author::Plicease::Upload]
 cpan = 1
 
+[Deprecated]
